Use Paths.get inplace of Path.of